# tarefa06_painel

./: CMakeLists.txt  README.md  painel.c
libs/: buzzer.c  buzzer.h  display.c  display.h  font.h  pio.c  ssd1306.c
